Control authorization process with timeouts (#644840)

This should avoid weird situations when the network connection is
too slow that led frogr not to provide any feedback during the
authorization process, hence seeming like it's doing nothing,
which most likely is the problem behind bug 644840.

https://bugzilla.gnome.org/show_bug.cgi?id=644840